Move default project to dedicated folder.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 project(StepMania)
 
+# Put predefined targets in separate group.
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+
 add_subdirectory(extern)
