--- a/extern/lua-5.1/CMakeLists.txt
+++ b/extern/lua-5.1/CMakeLists.txt
@@ -62,4 +62,7 @@ set(LUA_HPP
 	"src/lvm.h"
 	"src/lzio.h")
 
+source_group("" FILES ${LUA_SRC})
+source_group("" FILES ${LUA_HPP})
+
 add_library("lua-5.1" ${LUA_SRC} ${LUA_HPP})
