Utilize virtual directories better.

--- a/extern/glew-1.5.8/CMakeLists.txt
+++ b/extern/glew-1.5.8/CMakeLists.txt
@@ -12,3 +12,5 @@ set(GLEW_SRC "src/glew.c")
 source_group("" FILES ${GLEW_SRC})
 
 add_library("glew" ${GLEW_SRC})
+
+set_property(TARGET glew PROPERTY FOLDER "External Libraries")
