Move to dedicated folder.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,18 +4,7 @@ add_subdirectory(libtommath)
 
 
 # First part is for the version incrementer tool.
-
-if(MSVC)
-	add_definitions(/D _CRT_SECURE_NO_WARNINGS)
-#   Uncomment the one below if it ever gets fixed.
-#	VS_GLOBAL_ROOTNAMESPACE("VersionUpdater")
-endif(MSVC)
-
-source_group("" FILES versionupdater.cpp)
-
-add_executable("VersionUpdater" versionupdater.cpp)
-
-set_property(TARGET "VersionUpdater" PROPERTY FOLDER "Internal Libraries")
+add_subdirectory(libversionupdater)
 
 # Run the executable above.
 add_custom_command(
